# Market_Sentinel

./: .gitignore  README.md  companies.csv  dashboard.py  main.py  pyproject.toml  requirements.txt  requirments.txt
.github/workflows/: pipeline.yml  sync_data.yml
